--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -17,6 +17,7 @@
   background-color: #EEE;
   margin: .5em;
   padding: 0;
+  border: none;
   border-radius: 4px;
   display: flex;
   align-items: stretch;
