--- a/src/app/hero-detail/hero-detail.component.scss
+++ b/src/app/hero-detail/hero-detail.component.scss
@@ -12,6 +12,8 @@ label {
     padding: 1rem;
     border-radius: 4px;
     font-size: 1rem;
+    margin-right: 10px;
+    border: none;
   }
   button:hover {
     background-color: #cfd8dc;
