--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -12,6 +12,7 @@ h2 {
     padding: 1rem;
     border-radius: 4px;
     font-size: 1rem;
+    border: none;
   }
   .clear:hover {
     color: white;
